Nullmark SessionContext (#2174)
The primary change in this PR is null marking SessionContext. As part of
nullmarking, I converted some of the fields that were stored as elements
in the map into proper member variables. For example, EventProperties
used to be stored in the map which would have required marking
`getEventProperties()` as @Nullable, but by making it a member variable
I'm able to ensure it is never null.

For other elements that are still saved in the map (e.g. uuid) I
switched to typed keys. I also cleaned up some messy generic usage
around the typed map, and added logic to pre-size it